typescript/checker/tests/conformance/es6/computedProperties/computedPropertyNamesDeclarationEmit6_ES6.ts.stderr
error: TS2464 {
    span: Span {
        lo: BytePos(
            86,
        ),
        hi: BytePos(
            90,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/computedProperties/computedPropertyNamesDeclarationEmit6_ES6.ts:7:3
  |
7 |   [!1]: {}
  |   ^^^^

